<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.PerfilActivity">

        <include
            android:id="@+id/includeToolbarPerfil"
            layout="@layout/toolbar_customizada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPerfil"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/add_img_perfil"
            android:importantForAccessibility="no"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includeToolbarPerfil"
            app:shapeAppearanceOverlay="@style/Circulo"
            app:strokeWidth="4dp"
            app:strokeColor="?attr/colorPrimary"
            android:src="@drawable/man_avatar6" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAtualizarImgPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/imgPerfil"
            app:layout_constraintEnd_toEndOf="@+id/imgPerfil"
            app:srcCompat="@android:drawable/ic_popup_sync"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editTextNomePerfil"
            style="@style/EditText_form"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nome_default"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPerfil"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/textEmailPerfil"
            style="@style/EditText_form"
            android:maxLines="1"
            android:text="almirrdsnegro@gmail.com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomePerfil"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <Button
            android:id="@+id/btnAtualizarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext"
            android:paddingHorizontal="78dp"
            android:text="@string/atualizar"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmailPerfil" />

        <ProgressBar
            android:id="@+id/pbPerfil"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAtualizarPerfil"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>